monitoring/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
  labels:
    app: loki
spec:
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
  selector:
    app: loki
